--- a/styles.css
+++ b/styles.css
@@ -4,19 +4,32 @@ body, h1, h2, h3, p, ul, li {
   }
   
   body {
+    background-image: url(gambar/tile_background.png);
+    background-color: #f5e7e7;
     font-family: Arial, sans-serif;
     line-height: 1.6;
   }
   
+  html {
+    scroll-behavior: smooth;
+  }
+
   header {
-    background-color: #FFFFFF;
-    color: white;
+    height: 100px;
+    color: rgb(255, 255, 255);
+    background-color: #00ccff;
     padding: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
   
+  header img {
+    width: 40px;
+    height: 50px;
+    border-radius: 30%;
+
+  }
   nav ul {
     list-style: none;
     display: flex;
@@ -54,23 +67,49 @@ body, h1, h2, h3, p, ul, li {
   }
 
   .intro1 {
-    text-align: left;
-    margin-bottom: 3rem;
-    background-image: url(gambar/bg1.png);
-    background-color: green;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 50vh;
-    max-width: 2000px;
+    display: grid;
+    align-items: center; 
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 5px;
+    text-align: center;
+    background-image: url("gambar/bg3.png");
+    background-position: center top;
+    background-size: 2000px 500px;
+    background-repeat: no-repeat;
+    background-color: ##00ccff;
+ 
   }
 
+
+
   .intro2 {
+    border-radius: 32px;
+    padding-left: 70px;
+    padding-right: 70px;
+    padding-top: 20px;
+    margin-left: 250px;
     text-align: left;
-    margin-bottom: 3rem;
-    max-width: 1000px;
+    width: 1000px;
+    height: 300px;
+  }
+
+  div.intro2 {
+    background-color: rgba(135, 260, 250, 0.6);
+  }
+
+  .intro3 {
+    width: 400px;
+    height: 398px;
+  
+  }
+
+  .intro3 img {
+    width: 800px;
+    height: 398px;
+    object-fit: contain;
+    float: right;
+    margin-top: 100px;
+
   }
   
   .featured-policies {
@@ -79,7 +118,7 @@ body, h1, h2, h3, p, ul, li {
   }
   
   .policy {
-    background-color: #ff0000;
+    background-color: #00ccff;
     flex-basis: calc(33.33% - 2rem);
     padding: 2.5rem;
     border: 6px solid #ddd;
@@ -89,8 +128,8 @@ body, h1, h2, h3, p, ul, li {
 
   .contact {
     text-align: left;
-    background-color: #ff0000;
-    max-width: 500px ;
+    background-color: #00ccff;
+    max-width: 2000px ;
     padding: 2.5rem;
     border: 6px solid #ddd;
     border-radius: 5px;
@@ -101,7 +140,7 @@ body, h1, h2, h3, p, ul, li {
   .btn {
     display: inline-block;
     padding: 0.5rem 1rem;
-    background-color: #FF0133;
+    background-color: #1d9485;
     color: white;
     text-decoration: none;
     border-radius: 5px;
@@ -119,7 +158,7 @@ body, h1, h2, h3, p, ul, li {
     color: white;
   }
   .slider {
-    background-color: #FF0133;
+    background-color: #00ccff;
     width: 100%;
     max-width: 7000px;
     max-height: 7000px;
@@ -137,4 +176,47 @@ body, h1, h2, h3, p, ul, li {
     height: auto;
     display: block;
     margin: 0 auto;
+  }
+
+  .featured-agent {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 70px 0 70px;
+  }
+
+  .agent {
+    background-color: #00ccff;
+    flex-basis: calc(33.33% - 2rem);
+    padding: 2.5rem;
+    border: 6px solid #ddd;
+    border-radius: 5px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    margin: 0 70px 0 70px;
+  }
+
+  .user-manual {
+    display: grid;
+    align-items: center; 
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 5px;
+    text-align: center;
+    background-position: center top;
+    background-size: 2000px 500px;
+    background-repeat: no-repeat;
+    background-color: ##00ccff;
+ 
+  }
+
+  .manual {
+    background-color: #00ccff;
+    flex-basis: calc(33.33% - 2rem);
+    padding: 7px;
+    border: 6px solid #ddd;
+    border-radius: 5px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  }
+
+  .user-manual img {
+    width: 1875px;
+    height: 850px;
   }
