--- a/styles_details.css
+++ b/styles_details.css
@@ -1,36 +1,54 @@
 /* styles_details.css */
+*{
+    margin :0;
+  }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    background-color: #faf6f6;
-    color: #fff;
-    margin: 0;
-    padding: 0;
-}
+    background-image: url(gambar/tile_background.png);
+    background-color: #f5e7e7;
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+  }
 
-header {
-    background-color: #f6f2f2;
-    color: #00bcd4;
-    padding: 20px;
-    text-align: center;
-}
+  header {
+    height: 100px;
+    color: rgb(255, 255, 255);
+    background-color: #00ccff;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
 main {
     max-width: 800px;
     margin: 20px auto;
     padding: 20px;
-    background-color: #f4f3f3;
+    background-color: #7e7e7e8a;
     box-shadow: 0 0 10px rgba(242, 241, 241, 0.5);
     border-radius: 10px;
 }
 
-h2 {
+h1 {
+    color: #000000;
+  }
+
+.merah {
+    border: 3px;
     font-size: 32px;
     margin-bottom: 20px;
-    color: #00bcd4;
+    color: #000000;
+}
+.user-detail {
+   background-color: #ff0000; 
 }
 
+.user-detail h2 {
+    color: #d32f2f; 
+ }
+
 .user-table {
+    border: 3px solid #ddd;
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
@@ -44,17 +62,35 @@ h2 {
 }
 
 .user-table th {
-    background-color: #fbfbfb;
-    color: #00bcd4;
+    background-color: #1d9485;
+    color: #ffffff;
 }
 
-.user-table tr:nth-child(even) {
+.user-table tr:nth-child(1) {
     background-color: #f6f6f6;
+}
+.user-table tr:nth-child(2) {
+  background-color: #ffffff;
+}
+.user-table tr:nth-child(3) {
+  background-color: #f6f6f6;
+}
+.user-table tr:nth-child(4) {
+  background-color: #ffffff;
+}
+.user-table tr:nth-child(5) {
+  background-color: #f6f6f6;
+}
+.user-table tr:nth-child(6) {
+  background-color: #ffffff;
+}
+.user-table tr:nth-child(7) {
+  background-color: #f6f6f6;
 }
 
 footer {
-    background-color: #333;
-    color: #00bcd4;
+    background-color: #000000;
+    color: #00ccff;
     text-align: center;
     padding: 10px;
 }
@@ -67,8 +103,26 @@ footer {
     padding: 5px 10px;
     cursor: pointer;
     text-decoration: none;
+    border-radius: 5px;
 }
 
 .return-button:hover {
     background-color: #BCBCBC;
 }
+
+ /* Style for the Logout button */
+ .logout-button {
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    background-color: rgb(255, 0, 0);
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    border-radius: 5px;
+    border: 0;
+    transition: background-color 0.3s;
+  }
+  
+  /* Style for the Logout button on hover */
+  .logout-button:hover {
+    background-color: #c40000; 
+  }
