--- a/styles_log1.css
+++ b/styles_log1.css
@@ -19,7 +19,10 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-image: url(gambar/background.png);
+    background-image: url(gambar/bglogin.png);
+    background-repeat: no-repeat;
+    background-size: 2000px 1200px;
+    background-position: center top;
     background-color: green;
     margin: 0;
     padding: 0;
@@ -28,6 +31,7 @@ body {
     align-items: center;
     min-height: 100vh;
   }
+
   .return-link {
     display: block;
     text-align: center;
@@ -76,7 +80,7 @@ body {
     display: block;
     width: 100%;
     padding: 0.5rem;
-    background-color: #FF0133;
+    background-color: #1d9485;
     color: white;
     border: none;
     border-radius: 5px;
@@ -84,6 +88,6 @@ body {
   }
   
   .btn:hover {
-    background-color: #555;
+    color: #555;
   }
   
