--- a/styles_user_1.css
+++ b/styles_user_1.css
@@ -1,13 +1,29 @@
+/* styles_details.css */
+*{
+  margin :0;
+}
 
 .insurance-table {
     max-width: 800px;
     margin: 0 auto;
     padding: 1rem;
   }
-  
-  header {
-    background-color: #FFFFFF;
+
+  body {
+    background-image: url(gambar/tile_background.png);
+    background-color: #f5e7e7;
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+  }
+
+  h1 {
     color: #000000;
+  }
+
+  header {
+    height: 100px;
+    color: rgb(255, 255, 255);
+    background-color: #00ccff;
     padding: 1rem;
     display: flex;
     justify-content: space-between;
@@ -16,13 +32,17 @@
 
   main {
     padding: 20px;
-    background-color: #f2f2f2;
+    background-color: #7e7e7e8a;
 }
 
   table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 1rem;
+  }
+
+  tbody {
+    background-color: #ffffff;
   }
   
   th, td {
@@ -32,7 +52,7 @@
   }
   
   th {
-    background-color: #FF0000;
+    background-color: #ffffff;
   }
   
   tr:nth-child(even) {
@@ -40,15 +60,18 @@
   }
   
  /* Style for the Logout button */
-.logout-button {
-  background-color: #f44336; 
-  color: white; 
-  border: none; 
-  padding: 10px 20px; 
-  cursor: pointer; 
+ .logout-button {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  background-color: rgb(255, 0, 0);
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  border-radius: 5px;
+  border: 0;
+  transition: background-color 0.3s;
 }
 
 /* Style for the Logout button on hover */
 .logout-button:hover {
-  background-color: #d32f2f; 
+  background-color: #c40000; 
 }
