--- a/style_admin_1.css
+++ b/style_admin_1.css
@@ -11,6 +11,14 @@ header {
   justify-content: space-between;
   align-items: center;
 }
+
+header img {
+  width: 300px;
+  height: 100px;
+  border-radius: 5% 5%;
+
+}
+
   body {
     background-image: url(gambar/tile_background.png);
     background-color: #f5e7e7;
@@ -97,6 +105,18 @@ footer a {
   cursor: pointer;
   border-radius: 5px; 
   margin-right: 10px; 
+}
+
+.buton {
+  display: inline-block;
+  padding: 10px 20px; 
+  background-color: #1d9485; 
+  color: white; 
+  text-decoration: none;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px; 
+  margin-left: 10px; 
 }
 
 
