--- a/styles_details.css
+++ b/styles_details.css
@@ -20,6 +20,13 @@ body {
     align-items: center;
   }
 
+  header img {
+    width: 300px;
+    height: 100px;
+    border-radius: 5% 5%;
+
+  }
+
 main {
     max-width: 800px;
     margin: 20px auto;
@@ -94,10 +101,27 @@ footer {
     text-align: center;
     padding: 10px;
 }
+/*delete user*/
+.delete-button {
+  display: inline-block;
+  padding: 10px 10px;
+  background-color: rgb(255, 0, 0);
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  border-radius: 5px;
+  border: 0;
+  transition: background-color 0.3s;
+  margin-left: 600px;
+}
+
+/* Style for the Logout button on hover */
+.delete-button:hover {
+  background-color: #c40000; 
+}
 
 /* Additional styles for consistency with styles_user_1.css */
 .return-button {
-    background-color: #FF0000;
+    background-color: #1d9485;
     color: rgb(253, 253, 253);
     border: none;
     padding: 5px 10px;
@@ -125,4 +149,8 @@ footer {
   /* Style for the Logout button on hover */
   .logout-button:hover {
     background-color: #c40000; 
+  }
+
+  .lol {
+    display: flex;
   }
