--- a/styles_register_admin.css
+++ b/styles_register_admin.css
@@ -21,6 +21,13 @@ header {
     align-items: center;
   }
 
+  header img {
+    width: 300px;
+    height: 100px;
+    border-radius: 5% 5%;
+
+  }
+
   h1 {
     color: #000000;
   }
