--- a/styles_details.css
+++ b/styles_details.css
@@ -111,7 +111,7 @@ footer {
   border-radius: 5px;
   border: 0;
   transition: background-color 0.3s;
-  margin-left: 600px;
+  margin-left: 550px;
 }
 
 /* Style for the Logout button on hover */
@@ -132,6 +132,24 @@ footer {
 
 .return-button:hover {
     background-color: #BCBCBC;
+}
+
+/* Additional styles for consistency with styles_user_1.css */
+.renew-button {
+  display: inline-block;
+  padding: 10px 10px;
+  background-color: #1d9485;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  border-radius: 5px;
+  border: 0;
+  transition: background-color 0.3s;
+  margin-left: 10px;
+}
+
+/* Style for the Logout button on hover */
+.renew-button:hover {
+  background-color: #BCBCBC; 
 }
 
  /* Style for the Logout button */
