--- a/styles_add_users.css
+++ b/styles_add_users.css
@@ -70,6 +70,7 @@ nav ul li a {
 
 /* Style for the Logout button */
 .logout-button {
+  font: 16px sans-serif;
   display: inline-block;
   padding: 0.5rem 1rem;
   background-color: rgb(255, 0, 0);
@@ -127,9 +128,7 @@ main {
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     max-width: 1000px; /* Set the maximum width of the form container */
-    margin-bottom: 20px;
-    margin-top: 20px;
-    margin-left: 350px;
+    margin: 20px auto;
 }
 
 /* Style form labels and input fields */
@@ -211,4 +210,188 @@ main {
     color: #009900;
     padding: 10px;
     margin-top: 10px;
+}
+
+@media (max-width: 430px) {
+  
+  body {
+    background-image: url(gambar/tile_background.png);
+    background-color: #f5e7e7;
+    font-size: 12px;
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+  }
+  header {
+    height: 70px;
+    color: rgb(255, 255, 255);
+    background-color: #00ccff;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  header h1 {
+    font-size: 12px;
+  }
+  
+  header img {
+    width: 100px;
+    height: 50px;
+    border-radius: 5% 5%;
+
+  }
+
+  nav ul {
+    padding: 10px;
+    margin-left: 0px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    list-style: none;
+    display: flex;
+  }
+  
+  nav li {
+    margin-right: 10px;
+  }
+  
+  nav a {
+    color: white;
+    text-decoration: none;
+    transition: color 0.3s;
+  }
+  
+  nav a:hover {
+    bcolor: #ddd;
+  }
+
+  div {
+    bcolor: #4000;
+  }
+
+  .button {
+    display: inline-block;
+    padding: 5px 10px; 
+    background-color: #1d9485; 
+    color: white; 
+    font-size: 10px;
+    text-decoration: none;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px; 
+    margin-right: 3px; 
+  }
+
+  .buton {
+    display: inline-block;
+    padding: 10px 20px; 
+    background-color: #1d9485; 
+    color: white; 
+    text-decoration: none;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px; 
+    margin-left: 3px; 
+  }
+
+  .btn {
+    font-size: 10px;
+    display: inline-block;
+    padding: 5px 10px;
+    background-color: #1d9485;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+  }
+  
+  .btn:hover {
+    background-color: #555;
+  }
+
+  .logout-button {
+    display: inline-block;
+    padding: 5px 10px;
+    background-color: rgb(255, 0, 0);
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    border-radius: 5px;
+    border: 0;
+    transition: background-color 0.3s;
+  }
+  
+  .logout-button {
+    font-size: 10px;
+    
+  }
+
+  .pad2 {
+    border-radius: 32px;
+    border: 1px solid #ffffff;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 30px;
+    margin-bottom: 300px;
+  }
+
+  div.pad2 {
+    background-color: rgba(184, 184, 184, 0.6);
+  }
+
+  .add-user-form {
+    display: flex;
+    column-gap: 20px;
+    flex-wrap: wrap;
+    background-color: #ffffff;
+    border-radius: 5px;
+    padding: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 1000px; /* Set the maximum width of the form container */
+    margin: 20px 10px 5px 10px;
+}
+
+.add-user-form label {
+  display: block;
+  margin: 10px 0;
+  font-weight: bold;
+  text-align: left; /* Align labels to the left */
+}
+
+.nama {
+  font-size: 11px;
+  float: left;
+  width: 100px;
+  margin-top: 6px;
+}
+
+.kotak {
+  float: left;
+  width: auto;
+  margin-top: 6px;
+}
+
+.add-user-form input[type="text"],
+.add-user-form input[type="tel"],
+.add-user-form input[type="email"],
+.add-user-form input[type="date"] {
+    padding: 5px 10px;
+    margin: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    display:inline-block; /* Display input fields side by side with labels */
+    box-sizing: border-box; /* Include padding and border in the input field's total width */
+}
+
+.karkulator {
+  margin: 10px 10px;
+
+}
+
+.pad3 {
+  background-color: #1d9485;
+  width: 100%;
+  height: 200px;
+  margin-top: 20px;
+  border-radius: 24px;
+}
 }
