--- a/styles_user_1.css
+++ b/styles_user_1.css
@@ -38,33 +38,44 @@
   }
 
   main {
+    max-width: 1500px;
+    margin-bottom: 20px;
+    margin: 20px auto;
     padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     background-color: #7e7e7e8a;
 }
-
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 1rem;
-  }
 
   tbody {
     background-color: #ffffff;
   }
   
-  th, td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
-  }
-  
-  th {
-    background-color: #ffffff;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #FFFFFF;
-  }
+  section {
+    margin-bottom: 20px;
+}
+
+h3 {
+    color: #000000;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+th, td {
+  border: 1px solid #ddd;
+  padding: 12px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+th {
+    background-color: #1d9485;
+    color: white;
+}
   
  /* Style for the Logout button */
  .logout-button {
@@ -81,4 +92,132 @@
 /* Style for the Logout button on hover */
 .logout-button:hover {
   background-color: #c40000; 
+}
+
+@media (max-width: 430px) {
+  
+  body {
+    background-image: url(gambar/tile_background.png);
+    background-color: #f5e7e7;
+    font-size: 12px;
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+  }
+  header {
+    height: 70px;
+    color: rgb(255, 255, 255);
+    background-color: #00ccff;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  header h1 {
+    font-size: 12px;
+  }
+  
+  header img {
+    width: 100px;
+    height: 50px;
+    border-radius: 5% 5%;
+
+  }
+
+  nav ul {
+    
+    list-style: none;
+    display: flex;
+  }
+  
+  nav li {
+    margin-right: 10px;
+  }
+  
+  nav a {
+    color: white;
+    text-decoration: none;
+    transition: color 0.3s;
+  }
+  
+  nav a:hover {
+    bcolor: #ddd;
+  }
+
+  div {
+    bcolor: #4000;
+  }
+
+  .btn {
+    font-size: 10px;
+    display: inline-block;
+    padding: 5px 10px;
+    background-color: #1d9485;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+  }
+  
+  .btn:hover {
+    background-color: #555;
+  }
+
+  .logout-button {
+    display: inline-block;
+    padding: 5px 10px;
+    background-color: rgb(255, 0, 0);
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    border-radius: 5px;
+    border: 0;
+    transition: background-color 0.3s;
+  }
+  
+  .logout-button {
+    font-size: 10px;
+    
+  }
+
+  main {
+    max-width: 1500px;
+    margin-bottom: 20px;
+    margin: 20px 5px;
+    padding: 5px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #7e7e7e8a;
+}
+
+  tbody {
+    background-color: #ffffff;
+  }
+  
+  section {
+    margin-bottom: 20px;
+}
+
+h3 {
+    color: #000000;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 10px;
+}
+
+th, td {
+  font-size: 11px;
+  border: 1px solid #ddd;
+  padding: 5px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+th {
+    background-color: #1d9485;
+    color: white;
+}
+
 }
