--- a/style_admin_1.css
+++ b/style_admin_1.css
@@ -54,7 +54,7 @@ table {
 
 /* CSS for table headers */
 table th {
-  background-color: #1d9485; 
+  background-color: #0012b4; 
   color: white; 
   padding: 10px; 
   text-align: left; 
@@ -98,7 +98,7 @@ footer a {
 .button {
   display: inline-block;
   padding: 10px 20px; 
-  background-color: #1d9485; 
+  background-color: #0012b4; 
   color: white; 
   text-decoration: none;
   border: none;
@@ -110,7 +110,7 @@ footer a {
 .buton {
   display: inline-block;
   padding: 10px 20px; 
-  background-color: #1d9485; 
+  background-color: #0012b4; 
   color: white; 
   text-decoration: none;
   border: none;
@@ -122,11 +122,11 @@ footer a {
 
 /* CSS for button colors (Manage Users, Add Users) */
 .manage-button {
-  background-color: #1d9485;
+  background-color: #0012b4;
 }
 
 .add-button {
-  background-color: #1d9485; 
+  background-color: #0012b4; 
 }
 
 /* CSS for button colors (Logout) */
@@ -224,7 +224,7 @@ h1 {
     .button {
       display: inline-block;
       padding: 5px 10px; 
-      background-color: #1d9485; 
+      background-color: #0012b4; 
       color: white; 
       font-size: 10px;
       text-decoration: none;
@@ -237,7 +237,7 @@ h1 {
     .buton {
       display: inline-block;
       padding: 10px 20px; 
-      background-color: #1d9485; 
+      background-color: #0012b4; 
       color: white; 
       text-decoration: none;
       border: none;
@@ -250,7 +250,7 @@ h1 {
       font-size: 10px;
       display: inline-block;
       padding: 5px 10px;
-      background-color: #1d9485;
+      background-color: #0012b4;
       color: white;
       text-decoration: none;
       border-radius: 5px;
@@ -306,7 +306,7 @@ table {
 /* CSS for table headers */
 table th {
   font-size: 11px;
-  background-color: #1d9485; 
+  background-color: #0012b4; 
   color: white; 
   padding: 5px; 
   text-align: left; 
