--- a/styles_add_users.css
+++ b/styles_add_users.css
@@ -59,7 +59,7 @@ nav ul li a {
 .button {
   display: inline-block;
   padding: 10px 20px; 
-  background-color: #1d9485; 
+  background-color: #0012b4; 
   color: white; 
   text-decoration: none;
   border: none;
@@ -70,7 +70,6 @@ nav ul li a {
 
 /* Style for the Logout button */
 .logout-button {
-  font: 16px sans-serif;
   display: inline-block;
   padding: 0.5rem 1rem;
   background-color: rgb(255, 0, 0);
@@ -86,11 +85,11 @@ nav ul li a {
 }
 
 .manage-button {
-    background-color: #1d9485;
+    background-color: #0012b4;
 }
 
 .add-button {
-    background-color: #1d9485;
+    background-color: #0012b4;
 }
 
 /* Style the main content */
@@ -166,7 +165,7 @@ main {
 }
 
 .pad3 {
-    background-color: #1d9485;
+    background-color: #0012b4;
     width: 300px;
     height: 350px;
     border-radius: 24px;
@@ -272,7 +271,7 @@ main {
   .button {
     display: inline-block;
     padding: 5px 10px; 
-    background-color: #1d9485; 
+    background-color: #0012b4; 
     color: white; 
     font-size: 10px;
     text-decoration: none;
@@ -285,7 +284,7 @@ main {
   .buton {
     display: inline-block;
     padding: 10px 20px; 
-    background-color: #1d9485; 
+    background-color: #0012b4; 
     color: white; 
     text-decoration: none;
     border: none;
@@ -298,7 +297,7 @@ main {
     font-size: 10px;
     display: inline-block;
     padding: 5px 10px;
-    background-color: #1d9485;
+    background-color: #0012b4;
     color: white;
     text-decoration: none;
     border-radius: 5px;
