--- a/styles_log1.css
+++ b/styles_log1.css
@@ -80,7 +80,7 @@ body {
     display: block;
     width: 100%;
     padding: 0.5rem;
-    background-color: #1d9485;
+    background-color: #0012b4;
     color: white;
     border: none;
     border-radius: 5px;
